--- a/src/Componentes/Multicalendario/Multicalendario.css
+++ b/src/Componentes/Multicalendario/Multicalendario.css
@@ -38,7 +38,24 @@
   min-width: 100%;
   height: 100%;
   overflow-x: scroll;
+}
 
+.multicalendario .eje-vertical .lista-anuncios {
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.multicalendario .eje-vertical .lista-anuncios .anuncio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid rgb(235, 235, 235);
+  box-sizing: border-box;
+  background-color: white;
+}
+
+.multicalendario .eje-vertical .lista-anuncios .anuncio p {
+  margin: 0;
 }
 
 .multicalendario .eje-horizontal .div-botones-fechas {
