--- a/src/Componentes/Multicalendario/Multicalendario.css
+++ b/src/Componentes/Multicalendario/Multicalendario.css
@@ -26,7 +26,6 @@
 .multicalendario .eje-horizontal {
   grid-area: h;
   position: relative;
-  background-color: rgba(212, 0, 255, 0.2);
   min-width: 100%;
   height: 100%;
 }
@@ -40,9 +39,22 @@
   overflow-x: scroll;
 }
 
+.multicalendario .contendor-principal .div-filas-celdas {
+  box-sizing: border-box;
+}
+
+.multicalendario .contendor-principal .div-filas-celdas .div-altura-filas-celdas{
+  box-sizing: border-box;
+}
+
 .multicalendario .eje-vertical .lista-anuncios {
   height: 100%;
   overflow-y: scroll;
+  box-sizing: border-box;
+}
+
+.multicalendario .eje-vertical .lista-anuncios .div-altura-lista-anuncios {
+  box-sizing: border-box;
 }
 
 .multicalendario .eje-vertical .lista-anuncios .anuncio {
@@ -67,6 +79,7 @@
 
 .multicalendario .eje-horizontal .div-botones-fechas .boton-semana-pasada,
 .multicalendario .eje-horizontal .div-botones-fechas .boton-semana-siguiente {
+  z-index: 2;
   position: absolute;
   background-color: transparent;
   border: none;
@@ -84,7 +97,7 @@
   .eje-horizontal
   .div-botones-fechas
   .boton-semana-siguiente:hover {
-  background: rgb(247, 247, 247, 0.4);
+  background: rgb(247, 247, 247, 0.6);
 }
 
 .multicalendario
@@ -95,7 +108,7 @@
   .eje-horizontal
   .div-botones-fechas
   .boton-semana-siguiente:active {
-  background: rgb(247, 247, 247, 0.8);
+  background: rgb(167, 167, 167);
 }
 
 .multicalendario .eje-horizontal .div-botones-fechas .boton-semana-pasada {
