--- a/src/Componentes/Celda/Celda.css
+++ b/src/Componentes/Celda/Celda.css
@@ -2,6 +2,26 @@
   position: absolute;
   border-right: 1px solid rgb(235, 235, 235);
   border-bottom: 1px solid rgb(235, 235, 235);
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.celda .contenido-celda {
+  width: 100%;
+  height: 100%;
+}
+
+.celda .contenido-celda:hover {
+  box-shadow: rgb(0 0 0) 0px 0px 0px 2px inset;
+  border-color: transparent;
+  border-radius: 4px;
+}
+
+.celda .contenido-celda.fecha-hoy {
+  border-left: 1px solid rgb(0, 0, 0);
+}
+
+.celda .contenido-celda.fecha-bloqueada {
   background: linear-gradient(
     to left top,
     rgb(255, 255, 255) 0%,
@@ -10,5 +30,77 @@
     rgb(255, 255, 255) calc(50% + 1px),
     rgb(255, 255, 255) 100%
   );
+}
+
+.celda .contenido-celda.fecha-pasada {
+  background: rgba(242, 242, 242, 0.5);
+}
+
+.celda .contenido-celda.fecha-bloqueada.fecha-pasada,
+.celda .contenido-celda.fecha-bloqueada.fecha-sin-info {
+  background: linear-gradient(
+    to left top,
+    rgb(242, 242, 242, 0.5) 0%,
+    rgb(242, 242, 242, 0.5) calc(50% - 1px),
+    rgb(151, 151, 151) 50%,
+    rgb(242, 242, 242, 0.5) calc(50% + 1px),
+    rgb(242, 242, 242, 0.5) 100%
+  );
+}
+
+.celda .contenido-celda .precio-fecha {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 2px 5px 0 0;
+  color: #484848;
+  font-size: 12px;
+  box-sizing: border-box;
+}
+
+.celda .contenido-celda.fecha-sin-info {
+  background: rgb(242, 242, 242);
+}
+
+.celda .contenido-celda.fecha-sin-info .precio-fecha {
+  color: transparent;
+  background: rgb(220, 220, 220);
+  width: 25px;
+  height: 10px;
+}
+
+.celda .contenido-celda.fecha-reservacion {
+  background: rgba(242, 242, 242, 0.5);
+}
+
+.celda .reservacion {
+  z-index: 1;
+  height: 24px;
+  position: absolute;
+  left: 15%;
+  top: calc(50% - 12px);
+  text-align: left;
+  background-color: rgb(0, 132, 137);
+  padding: 0px 8px;
+  overflow: hidden;
+  border: none;
+  border-radius: 9001px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.celda .reservacion p {
+  margin: 0;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 800;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 8px;
+  color: rgb(255, 255, 255);
   box-sizing: border-box;
 }
