--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,5 +1,5 @@
-#modal,
-#close-modal {
+.modal,
+.close-modal {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -14,7 +14,7 @@
   animation-duration: 500ms;
 }
 
-#close-modal {
+.close-modal {
   animation-name: close-modal;
   animation-duration: 500ms;
 }
