--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -11,10 +11,12 @@
 
 .side-bar .sidebar-close-button {
   position: absolute;
-  top: 0;
+  top: 3px;
+  z-index: 2;
   height: 30px;
   width: 30px;
-  background-color: transparent;
+  background-color: rgba(247, 247, 247, 0.7);
+  border-radius: 20px;
   border: none;
   outline: none;
   transition: all 0.3s;
@@ -28,6 +30,7 @@
 
 .side-bar .sidebar-close-button:hover {
   color: var(--primary-color);
+  background-color: rgba(236, 236, 236, 0.7);
 }
 
 .side-bar .sidebar-close-button svg.open{
