--- a/src/components/Multicalendar/Multicalendar.css
+++ b/src/components/Multicalendar/Multicalendar.css
@@ -35,10 +35,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   box-sizing: border-box;
   border-bottom: var(--border-tenues);
-  
 }
 
 .multicalendar .div-upper-left-component {
@@ -100,6 +99,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  flex-grow: 1;
 }
 
 .multicalendar .div-main-container {
