--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,4 +1,4 @@
-.search-bar .div-search-bar {
+.trc-search-bar .div-search-bar {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,27 +9,27 @@
   border-radius: 6px;
 }
 
-.search-bar .div-search-bar input {
+.trc-search-bar .div-search-bar input {
   width: 100%;
   border: none;
 }
 
-.search-bar .div-search-bar input:focus {
+.trc-search-bar .div-search-bar input:focus {
   border: none;
   outline: none;
 }
 
-.search-bar .div-search-bar svg {
+.trc-search-bar .div-search-bar svg {
   width: 36px;
   padding: 0px 10px;
 }
 
-.search-bar .div-search-bar .icono-search-bar-opciones {
+.trc-search-bar .div-search-bar .icono-search-bar-opciones {
   cursor: pointer;
   transition: all 0.5s;
 }
 
-.search-bar .div-search-bar .icono-search-bar-opciones.icono-search-bar-opciones-desactivado {
+.trc-search-bar .div-search-bar .icono-search-bar-opciones.icono-search-bar-opciones-desactivado {
   cursor: not-allowed;
   color: rgb(184, 184, 184);
 }
