--- a/src/components/ProgressBar/ProgressBar.css
+++ b/src/components/ProgressBar/ProgressBar.css
@@ -1,4 +1,4 @@
-.progress-bar {
+.trc-progress-bar {
   height: 40px;
   width: 100%;
   position: relative;
@@ -6,7 +6,7 @@
   backdrop-filter: blur(10px);
 }
 
-.progress-bar .fillable-body {
+.trc-progress-bar .fillable-body {
   position: relative;
   height: 100%;
   width: 100%;
@@ -18,14 +18,14 @@
   overflow: hidden;
 }
 
-.progress-bar .fillable-body .filler {
+.trc-progress-bar .fillable-body .filler {
   height: 100%;
   box-sizing: border-box;
   transition: all 0.2s;
   border-radius: 100px;
 }
 
-.progress-bar .fillable-body p {
+.trc-progress-bar .fillable-body p {
   position: absolute;
   width: 100%;
   height: 100%;
