--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,15 +1,15 @@
-.side-bar {
+.trc-side-bar {
   position: absolute;
   top: 0;
   height: 100%;
   z-index: 2;
   background-color: rgb(253, 253, 253);
-  box-shadow: 5px 0px 15px 0px rgb(206 206 206);
+  box-shadow: 0px 0px 15px 0px rgb(206 206 206);
   transition: all 0.5s ease-in-out;
   animation: fade-in-side-bar 1s ease-in;
 }
 
-.side-bar .sidebar-close-button {
+.trc-side-bar .sidebar-close-button {
   position: absolute;
   top: 3px;
   z-index: 2;
@@ -28,17 +28,17 @@
   cursor: pointer;
 }
 
-.side-bar .sidebar-close-button:hover {
+.trc-side-bar .sidebar-close-button:hover {
   color: var(--primary-color);
   background-color: rgba(236, 236, 236, 0.7);
 }
 
-.side-bar .sidebar-close-button svg.open{
+.trc-side-bar .sidebar-close-button svg.open{
   transform: rotate(0deg);
   transition: all 0.5s;
 }
 
-.side-bar .sidebar-close-button svg.close{
+.trc-side-bar .sidebar-close-button svg.close{
   transform: rotate(180deg);
   transition: all 0.5s;
 }
