--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,19 +1,23 @@
-.slider {
+.trc-slider {
   display: flex;
   align-items: center;
 }
 
-.slider .left-fill {
+.trc-slider.disabled{
+  opacity: 0.7;
+}
+
+.trc-slider .left-fill {
   border: 2px solid rgb(216, 216, 216);
   background-color: var(--secondary-color);
 }
 
-.slider .right-fill {
+.trc-slider .right-fill {
   border: 2px solid rgb(216, 216, 216);
   background-color: rgb(211, 211, 211);
 }
 
-.slider .sphere {
+.trc-slider .sphere {
   border-radius: 100%;
   box-shadow: 0px 0px 20px 2px #a7a7a7;
   background-color: rgb(255, 255, 255);
@@ -24,7 +28,7 @@
   z-index: 2;
 }
 
-.slider .sphere p {
+.trc-slider .sphere p {
   margin: 0;
   font-size: 12px;
   font-weight: 600;
@@ -32,7 +36,7 @@
   width: 25%;
 }
 
-.slider .sphere input {
+.trc-slider .sphere input {
   width: 70%;
   border: none;
   background-color: transparent;
@@ -42,10 +46,10 @@
   color: #757575;
 }
 
-.slider .sphere input::-webkit-inner-spin-button {
+.trc-slider .sphere input::-webkit-inner-spin-button {
   display: none;
 }
 
-.slider .sphere input:focus {
+.trc-slider .sphere input:focus {
   outline: none;
 }
