--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
   --green-palette-four: #27580f;
   --green-palette-five: #1b3a0c;
   --light-gray: #959595;
+  --medium-gray: #787878;
 }
 
 input[type="checkbox"] {
