--- a/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
+++ b/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
@@ -29,14 +29,13 @@
     width: 100%;
     height: 312px;
     overflow-y: scroll;
-    scroll-snap-type: y mandatory;
-    scroll-snap-stop: always;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
     }
     .days-grid {
       width: 100%;
-      scroll-snap-align: start;
       .days-row {
         width: 100%;
         display: flex;
@@ -56,8 +55,7 @@
             margin: 0px;
             border-radius: 23px;
             background-color: #f3f3f3;
-            transition: background-color 400ms ease-in-out;
-            transition: color 200ms ease-in-out delay 400ms;
+            transition: all 300ms ease-in-out;
             &.day-in-month {
               color: var(--medium-gray, #787878);
               background-color: #f3f3f3;
