--- a/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
+++ b/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
@@ -11,9 +11,25 @@
     font-size: 16px;
   }
   .month-and-year {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     text-align: center;
     font-size: 22px;
+    .month-input {
+      width: fit-content;
+      background-color: transparent;
+      border: transparent;
+      text-align: right;
+      font-size: 18px;
+      color: #959595;
+    }
+    .year-input {
+      width: fit-content;
+      background-color: transparent;
+      border: transparent;
+    }
   }
   .week-days {
     display: flex;
