--- a/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
+++ b/src/components/CalendarDatePicker/CalendarDatePicker.module.scss
@@ -1,4 +1,5 @@
 .calendar-date-picker {
+  font-family: Arial, Helvetica, sans-serif;
   width: 390px;
   height: 426px;
   color: #959595;
@@ -17,6 +18,7 @@
     width: 100%;
     text-align: center;
     font-size: 22px;
+    padding: 10px 0px;
     .month-input {
       width: fit-content;
       background-color: transparent;
@@ -24,11 +26,10 @@
       text-align: right;
       font-size: 18px;
       color: #959595;
-    }
-    .year-input {
-      width: fit-content;
-      background-color: transparent;
-      border: transparent;
+      cursor: pointer;
+      &:focus {
+        outline: transparent;
+      }
     }
   }
   .week-days {
