--- a/src/components/InputBoxWithConfirmation/InputBoxWithConfirmation.module.scss
+++ b/src/components/InputBoxWithConfirmation/InputBoxWithConfirmation.module.scss
@@ -7,8 +7,8 @@
   background-color: rgb(250, 250, 250);
   border-radius: 8px;
   transition: border 0.3s;
-  .focused {
-    border-color: var(#ec6321);
+  &.focused {
+    border-color: #218dec;
   }
   .input-box-with-confirmation {
     box-sizing: border-box;
