--- a/src/components/CalendarDatePicker/subcomponents/CalendarScrollableSection.module.scss
+++ b/src/components/CalendarDatePicker/subcomponents/CalendarScrollableSection.module.scss
@@ -31,10 +31,11 @@
   
   .calendar-scrollable-section {
     width: 100%;
-    height: 312px;
+    aspect-ratio: 1 / 1;
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    border-bottom: 1px solid #ebebeb;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -46,11 +47,11 @@
         align-items: center;
         .day-cell {
           position: relative;
-          height: 52px;
           display: flex;
           align-items: center;
           justify-content: center;
           width: calc(100% / 7);
+          aspect-ratio: 1 / 1;
           .day {
             position: relative;
             --angle: 270deg;
@@ -61,15 +62,17 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 46px;
-            height: 46px;
+            width: calc(100% - 8px);
+            height: calc(100% - 8px);
             margin: 0px;
-            border-radius: 23px;
+            border-radius: 1000px;
             overflow: hidden;
             user-select: none;
+            transition: all 0.5s ease-in-out;
             cursor: pointer;
             p {
               z-index: 2;
+              margin: 0px;
             }
             .background {
               z-index: 1;
